# gSparse

./: .codedocs  .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  LICENSE  License.txt  README.md  appveyor.yml  travis.sh
Benchmark/: CMakeLists.txt  bench-2.cpp  bench-3.cpp  benchmark.cpp
Dataset/: 3-community-30.csv  4-community-30.csv  Complete-1000.csv  Complete-30.csv  README.md  dumbell-30.csv  sparsifier-3-Community-eps25-edges.csv  sparsifier-3-Community-eps25-weights.csv  sparsifier-3-Community-eps50-edges.csv  sparsifier-3-Community-eps50-weights.csv  sparsifier-3-Community-eps75-edges.csv  sparsifier-3-Community-eps75-weights.csv  sparsifier-4-Community-eps25-edges.csv  sparsifier-4-Community-eps25-weights.csv  sparsifier-4-Community-eps50-edges.csv  sparsifier-4-Community-eps50-weights.csv  sparsifier-4-Community-eps75-edges.csv  sparsifier-4-Community-eps75-weights.csv  sparsifier-Complete-eps25-edges.csv  sparsifier-Complete-eps25-weights.csv  sparsifier-Complete-eps50-edges.csv  sparsifier-Complete-eps50-weights.csv  sparsifier-Complete-eps75-edges.csv  sparsifier-Complete-eps75-weights.csv  sparsifier-dumbell-eps25-edges.csv  sparsifier-dumbell-eps25-weights.csv  sparsifier-dumbell-eps50-edges.csv  sparsifier-dumbell-eps50-weights.csv  sparsifier-dumbell-eps75-edges.csv  sparsifier-dumbell-eps75-weights.csv
Doc/: CMakeLists.txt  Doxy  Doxygen.in  Overview.md
Doc/html/: _approximate_e_r_8hpp_source.html  _aprox_e_r___s_p_l_8hpp_source.html  _aprox_e_r_s_l_m_jacobi_c_g_8hpp_source.html  _community_graph_8hpp_source.html  _complete_graph_8hpp_source.html  _config_8hpp_source.html  _e_r_sampling_8hpp_source.html  _effective_resistance_8hpp_source.html  _exact_e_r_8hpp_source.html  _exact_e_r_jacobi_c_g_8hpp_source.html  _framework_8hpp_source.html  _graph_8hpp_source.html  _graph_c_s_v_reader_8hpp_source.html  _graph_c_s_v_writer_8hpp_source.html  _graph_reader_8hpp_source.html  _graph_writer_8hpp_source.html  _j_l_8hpp_source.html  _sampling_8hpp_source.html  _sparsifier_8hpp_source.html  _swap_8hpp_source.html  _undirected_graph_8hpp_source.html  annotated.html  class_library_1_1v1_1_1_q_tstyle___test-members.html  class_library_1_1v1_1_1_q_tstyle___test.html  classes.html  classg_sparse_1_1_e_r_1_1___approximate_e_r-members.html  classg_sparse_1_1_e_r_1_1___approximate_e_r.html  classg_sparse_1_1_e_r_1_1___exact_e_r-members.html  classg_sparse_1_1_e_r_1_1___exact_e_r.html  classg_sparse_1_1_e_r_1_1_policy_1_1_aprox_e_r_s_l_m_jacobi_c_g-members.html  classg_sparse_1_1_e_r_1_1_policy_1_1_aprox_e_r_s_l_m_jacobi_c_g.html  classg_sparse_1_1_e_r_1_1_policy_1_1_exact_e_r_jacobi_c_g-members.html  classg_sparse_1_1_e_r_1_1_policy_1_1_exact_e_r_jacobi_c_g.html  classg_sparse_1_1_graph_c_s_v_reader-members.html  classg_sparse_1_1_graph_c_s_v_reader.html  classg_sparse_1_1_graph_c_s_v_writer-members.html  classg_sparse_1_1_graph_c_s_v_writer.html  classg_sparse_1_1_i_effective_resistance-members.html  classg_sparse_1_1_i_effective_resistance.html  classg_sparse_1_1_i_graph-members.html  (+33 more)
Doc/html/search/: all_0.js  all_3.js  all_4.js  all_5.js  all_8.js  all_9.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  enums_0.js  enumvalues_0.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_5.js  functions_6.js  functions_8.js  pages_0.js  searchdata.js  variables_0.js  variables_1.js  variables_2.js
Doc/latex/: annotated.tex  class_library_1_1v1_1_1_q_tstyle___test.tex  classg_sparse_1_1_e_r_1_1___approximate_e_r.eps  classg_sparse_1_1_e_r_1_1___approximate_e_r.tex  classg_sparse_1_1_e_r_1_1___exact_e_r.eps  classg_sparse_1_1_e_r_1_1___exact_e_r.tex  classg_sparse_1_1_e_r_1_1_policy_1_1_aprox_e_r_s_l_m_jacobi_c_g.tex  classg_sparse_1_1_e_r_1_1_policy_1_1_exact_e_r_jacobi_c_g.tex  classg_sparse_1_1_graph_c_s_v_reader.eps  classg_sparse_1_1_graph_c_s_v_reader.tex  classg_sparse_1_1_graph_c_s_v_writer.eps  classg_sparse_1_1_graph_c_s_v_writer.tex  classg_sparse_1_1_i_effective_resistance.eps  classg_sparse_1_1_i_effective_resistance.tex  classg_sparse_1_1_i_graph.eps  classg_sparse_1_1_i_graph.tex  classg_sparse_1_1_i_graph_reader.eps  classg_sparse_1_1_i_graph_reader.tex  classg_sparse_1_1_i_graph_writer.eps  classg_sparse_1_1_i_graph_writer.tex  classg_sparse_1_1_i_sparsifier.eps  classg_sparse_1_1_i_sparsifier.tex  classg_sparse_1_1_spectral_sparsifier_1_1_e_r_sampling.eps  classg_sparse_1_1_spectral_sparsifier_1_1_e_r_sampling.tex  classg_sparse_1_1_undirected_graph.eps  classg_sparse_1_1_undirected_graph.tex  hierarchy.tex  index.tex  md___users__bomb__documents__project_g_sparse__doc__overview.tex  refman.tex
Examples/: CMakeLists.txt  Example-1.cpp  Example-2.cpp  Example-3.cpp  Example-4.cpp  Example-5.cpp  README.md  demo-1.cpp  demo-2.cpp
Test/: CMakeLists.txt  Test-ApproximateER.cpp  Test-Builder-CompleteGraph.cpp  Test-ExactER.cpp  Test-GraphCSVReader.cpp  Test-GraphCSVWriter.cpp  Test-SpectralSparsifier-ERSampling.cpp  Test-UndirectedGraph.cpp  Test-UndirectedGraph.hpp  Test-Util-JL.cpp  Test-Util-Sampling.cpp  Test_Builder.cpp  Test_Graph.cpp  Test_IO.cpp  Test_SpectralSparsifier.cpp  Test_Util.cpp  catch.hpp  test-edges.csv  test-write-something.txt
Test/google-test/: CMakeLists.txt  CMakeLists.txt.in
include/: CMakeLists.txt
include/gSparse/: Config.hpp  GraphCSVReader.hpp  GraphCSVWriter.hpp  UndirectedGraph.hpp  gSparse.hpp
include/gSparse/Builder/: CommunityGraph.hpp  CompleteGraph.hpp
include/gSparse/ER/: ApproximateER.hpp  ExactER.hpp
include/gSparse/ER/Policy/: AproxERSLMJacobiCG.hpp  AproxER_SPL.hpp  ExactERJacobiCG.hpp
include/gSparse/Interface/: EffectiveResistance.hpp  Graph.hpp  GraphReader.hpp  GraphWriter.hpp  Sparsifier.hpp
include/gSparse/SpectralSparsifier/: ERSampling.hpp
include/gSparse/SpectralSparsifier/ERPolicy/: ApproximateER_JACOBI_CG.hpp  ExactER_CG.hpp
include/gSparse/Util/: JL.hpp  Sampling.hpp
include/gSparse_old/: Interface.hpp  SpectralSparsifier.hpp  UndirectedGraph.hpp
include/gSparse_old/Util/: CompInfo.hpp  Random.hpp
(+11 files in other folders)
